# constant_time_rollo

./: .gitignore  CMakeLists.txt  README.md  subdirs.cmake
NIST_standard_functions/: CMakeLists.txt
NIST_standard_functions/hash/: hash.c  hash.h
NIST_standard_functions/rng/: nist-rng.c  nist-rng.h
avx2_conversion/: CMakeLists.txt  avx2_conversion.c  avx2_conversion.h
rollo-i-128/: CMakeLists.txt  bf.c  bf.h  bf_uint128_t.c  main.c  rollo-i-128_parameters.h  rollo-i-decapsulation.c  rollo-i-decapsulation.h  rollo-i-encapsulation.c  rollo-i-encapsulation.h  rollo-i-keygen.c  rollo-i-keygen.h  rollo_i_polynomial_arithmetic.c  rollo_i_polynomial_arithmetic.h  rollo_i_polynomial_arithmetic_precomputed_matrices.h  vector_space.c  vector_space.h
tests/: CMakeLists.txt  hexhelper.c  hexhelper.h  test_all.c
tests/rollo-i-128-tests/: all_rollo-i-128_tests.c  all_rollo-i-128_tests.h  bf_tests.c  bf_tests.h  decapsulation_tests.c  decapsulation_tests.h  encapsulation_tests.c  encapsulation_tests.h  keygen_tests.c  keygen_tests.h  performance_comparisons.c  performance_comparisons.h  polynomial_arithmetic_tests.c  polynomial_arithmetic_tests.h  vector_space_tests.c  vector_space_tests.h
